--- a/src/index.css
+++ b/src/index.css
@@ -85,3 +85,9 @@ input:checked + .slider:before {
 .active {
   background-color: red;
 }
+
+.app-container {
+  display: flex;
+  height: 100vh;
+  overflow: hidden;
+}
